--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -353,6 +353,12 @@
             <label for="password">Password</label>
             <input type="password" name="password" id="password" required>
 
+            <label for="role">Role:</label>
+            <select name="role" id="role">
+                <option value="user">User</option>
+                <option value="admin">Admin</option>
+            </select>
+
             <button type="submit">Add User</button>
         </form>
     </div>
