--- a/templates/print_ledger_print.html
+++ b/templates/print_ledger_print.html
@@ -184,6 +184,9 @@
                 {% set sn = sn + 1 %}
             {% endfor %}
             {% if sn == 1 %}
+            <tr>
+                <td colspan="10" class="no-data">No transactions available for this item.</td>
+            </tr>
             {% endif %}
         </tbody>
     </table>
